[metadata]
name = kartoza_spike_removal_divan
version = 1.0
author = DivanVermeulen
author_email = vermeulendivan@gmail.com
description = Removes spikes from geopackage (gpkg) polygons, curvepolygons, multipolygons, and multisurface polygons
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vermeulendivan/polygon_spike_removal
project_urls =
    Bug Tracker = https://github.com/vermeulendivan/polygon_spike_removal/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
packages=find_packages(include=[kartoza_spike_removal_v01, kartoza_spike_removal_v01.*])

[options]
packages = find:
python_requires = >=3.5
